--- a/index.html
+++ b/index.html
@@ -3,49 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salud Integral</title>
+    <title>Salud Integral | Minimalista</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- SDK Firebase (añade esto antes de tu script) -->
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Salud Integral</h1>
-        <p>Tu guía para un estilo de vida saludable</p>
-    </header>
+    <div class="container">
+        <!-- Header -->
+        <header>
+            <h1>Salud<span>Gil</span></h1>
+            <p>Nutrición · Ejercicio · Bienestar</p>
+        </header>
 
-    <main>
-        <!-- Sección de Información -->
-        <section class="info-section">
-            <h2>Áreas de Salud</h2>
+        <!-- Secciones en horizontal -->
+        <div class="health-grid">
             <div class="health-card">
                 <h3>Nutrición</h3>
-                <p>Consejos para una alimentación balanceada y recetas saludables.</p>
+                <p>Guías de alimentación saludable y planes personalizados.</p>
             </div>
             <div class="health-card">
                 <h3>Ejercicio</h3>
-                <p>Rutinas adaptadas a todos los niveles.</p>
+                <p>Rutinas adaptadas a tus objetivos.</p>
             </div>
             <div class="health-card">
-                <h3>Salud Mental</h3>
-                <p>Técnicas de mindfulness y manejo del estrés.</p>
+                <h3>Bienestar</h3>
+                <p>Mindfulness y manejo del estrés.</p>
             </div>
-        </section>
+        </div>
 
-        <!-- Botones de Auth -->
-        <section class="auth-section">
-            <button id="loginBtn">Iniciar Sesión</button>
+        <!-- Botones centrados -->
+        <div class="auth-buttons">
+            <button id="loginBtn" class="outline">Iniciar Sesión</button>
             <button id="signupBtn">Registrarse</button>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2024 Salud Integral. Todos los derechos reservados.</p>
-    </footer>
+        </div>
+    </div>
 
     <!-- Scripts -->
-    <script src="firebase-config.js"></script> <!-- Configuración de Firebase -->
-    <script src="app.js"></script> <!-- Lógica de autenticación -->
+    <script src="firebase-config.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
