--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,14 @@
         </header>
 
         <!-- Secciones de salud (como en index.html) -->
+        <section class="profile-section">
+            <h2>Tu Perfil</h2>
+            <div id="userData">
+                <p><strong>Nombre:</strong> <span id="profileName"></span></p>
+                <p><strong>Edad:</strong> <span id="profileAge"></span></p>
+                <p><strong>Género:</strong> <span id="profileGender"></span></p>
+            </div>
+        </section>
         <div class="health-grid">
             <div class="health-card">
                 <h3>Nutrición</h3>
