--- a/dashboard.html
+++ b/dashboard.html
@@ -43,6 +43,11 @@
         </div>
     </div>
 
+    <form id="updateForm">
+        <h3>Actualizar Perfil</h3>
+        <input type="number" id="newAge" placeholder="Nueva edad">
+        <button type="submit">Guardar</button>
+    </form>
     <script src="firebase-config.js"></script>
     <script src="dashboard.js"></script> <!-- Nuevo archivo para la lógica -->
 </body>
