--- a/signup.html
+++ b/signup.html
@@ -25,6 +25,7 @@
                     <option value="otro">Otro</option>
                 </select>
                 <input type="number" id="age" placeholder="Edad" min="1" max="120" required>
+                <button type="submit">Registrarse</button>
             </form>
             <p>¿Ya tienes cuenta? <a href="login.html">Inicia sesión aquí</a>.</p>
             <div id="signupError" class="error-message"></div>
